--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: LiuJ Blog
-SEOTitle: 0x3f1e353f
+SEOTitle: "0x3f1e353f"
 header-img: img/home-bg.jpg
 email: isjieliu@163.com
 description: "关于程序与设计、算法与灵魂 | 刘捷，Web & Software Engineer | 这里是 @LiuJ刘捷 的个人博客，与你一起发现更大的世界。"
